--- a/server/render.yaml
+++ b/server/render.yaml
@@ -1,1 +1,10 @@
-
+services:
+  - type: web
+    name: brightwave-backend
+    env: python
+    buildCommand: ""
+    startCommand: "gunicorn app:app"
+    plan: free
+    envVars:
+      - key: PORT
+        value: 10000
