--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,5 @@
-Flask
-flask-cors
-gunicorn
-flask-mail
-twilio
+Flask>=2.0.0
+flask-cors>=3.0.10
+gunicorn>=20.0.4
+flask-mail>=0.9.1
+twilio>=7.0.0
