--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
-MAIL_USERNAME=your-email@gmail.com
-MAIL_PASSWORD=your-app-specific-password
-MAIL_DEFAULT_SENDER=your-email@gmail.com
+MAIL_USERNAME=brightwaveenterprises9@gmail.com
+MAIL_PASSWORD=nobf fkgr cztt hpji
+MAIL_DEFAULT_SENDER=brightwaveenterprises9@gmail.com
+NOTIFICATION_EMAILS=email1@example.com,email2@example.com,email3@example.com
