--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
 MAIL_USERNAME=brightwaveenterprises9@gmail.com
-MAIL_PASSWORD=nobf fkgr cztt hpji
+MAIL_PASSWORD=jgvg ybhz hbhz otqh
 MAIL_DEFAULT_SENDER=brightwaveenterprises9@gmail.com
 NOTIFICATION_EMAILS=email1@example.com,email2@example.com,email3@example.com
