--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
-MAIL_USERNAME=brightwaveenterprises9@gmail.com
+MAIL_USERNAME=brightwaveenterprises0@gmail.com
 MAIL_PASSWORD=jgvg ybhz hbhz otqh
-MAIL_DEFAULT_SENDER=brightwaveenterprises9@gmail.com
-NOTIFICATION_EMAILS=email1@example.com,email2@example.com,email3@example.com
+MAIL_DEFAULT_SENDER=brightwaveenterprises0@gmail.com
+NOTIFICATION_EMAILS=brightwaveenterprises0@gmail.com,Kamalmallami@gmail.com,Omobolajiakinbode@gmail.com
