--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask>=2.0.0
-flask-cors>=3.0.10
-gunicorn>=20.0.4
-flask-mail>=0.9.1
-python-dotenv>=0.21.0
+Flask==2.3.3
+Flask-Cors==4.0.1
+gunicorn==23.0.0
+Flask-Mail==0.10.0
+python-dotenv==1.0.1
+Werkzeug==3.0.4
+email-validator==2.2.0
