Remove 4-Bedroom Duplex - GRA, update Fate Road to Investment Land, update property statuses, and fix database connection string.

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ MAIL_USERNAME=brightwaveenterprises0@gmail.com
 MAIL_PASSWORD=jgvg ybhz hbhz otqh
 MAIL_DEFAULT_SENDER=brightwaveenterprises0@gmail.com
 NOTIFICATION_EMAILS=brightwaveenterprises0@gmail.com,Kamalmallami@gmail.com,Omobolajiakinbode@gmail.com
+
+DATABASE_URL=postgresql://brightwaveproperties_db_user:GlF8XsEBTKQqJSvoqCTCSuXorOlKXhhi@dpg-d1mu8pnfte5s73d4k3t0-a/brightwaveproperties_db
